--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,14 @@ server.port=8080
 spring.datasource.url=jdbc:h2:mem:vollmed_api
 spring.datasource.username=sa
 spring.datasource.password=
+
+#Cria o banco de dados
 spring.jpa.hibernate.ddl-auto=create
+
+#Console do h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+#Mostrar e formatar a querie sql
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
