--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.h2.console.path=/h2-console
 #Mostrar e formatar a querie sql
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+#Remove stacktrace em erros de requisição
+server.error.include-stacktrace=never
