--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.jpa.properties.hibernate.format_sql=false
 
 #Remove stacktrace em erros de requisição
 server.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET:123456}
