--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,9 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 #Mostrar e formatar a querie sql
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
 
 #Remove stacktrace em erros de requisição
 server.error.include-stacktrace=never
