--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,7 @@
-spring.application.name=api
-server.port=8080
-
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:vollmed_api
 spring.datasource.username=sa
 spring.datasource.password=
-
-#Cria o banco de dados
-spring.jpa.hibernate.ddl-auto=create
 
 #Console do h2
 spring.h2.console.enabled=true
@@ -17,7 +11,12 @@ spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#Remove stacktrace em erros de requisição
+#Remove stacktrace em erros de requisiï¿½ï¿½o
 server.error.include-stacktrace=never
 
-api.security.token.secret=${JWT_SECRET:123456}
+api.security.token.secret=${JWT_SECRET:12345678}
+
+#Cria o banco de dados
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
