--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
+spring.datasource.url=jdbc:mysql://localhost/vollmed_api
+spring.datasource.username=root
+spring.datasource.password=123456
+
 # Database configuration
-spring.datasource.url=jdbc:h2:mem:vollmed_api
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:vollmed_api
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 #Console do h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
 #Mostrar e formatar a querie sql
 spring.jpa.show-sql=true
@@ -17,6 +21,6 @@ server.error.include-stacktrace=never
 api.security.token.secret=${JWT_SECRET:12345678}
 
 #Cria o banco de dados
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
