--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
-spring.datasource.url=jdbc:mysql://localhost/vollmed_api
-spring.datasource.username=root
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://localhost/vollmed_api
+#spring.datasource.username=root
+#spring.datasource.password=123456
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Database configuration
-#spring.datasource.url=jdbc:h2:mem:vollmed_api
-#spring.datasource.username=sa
-#spring.datasource.password=
+spring.datasource.url=jdbc:h2:file:C:\\Users\\rick_\\OneDrive\\Documentos\\projects\\api\\vollmed_api
+spring.datasource.username=sa
+spring.datasource.password=
 
 #Console do h2
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 #Mostrar e formatar a querie sql
 spring.jpa.show-sql=true
