--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Database configuration
-spring.datasource.url=jdbc:h2:file:C:\\Users\\rick_\\OneDrive\\Documentos\\projects\\api\\vollmed_api
+spring.datasource.url=jdbc:h2:file:~\\Documents\\projects\\alura\\api\\vollmed_api
 spring.datasource.username=sa
 spring.datasource.password=
 
